# ChangeLog for sys-devel/scratchbox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de scratchbox-1.0.7.ebuild:
  Shorten description

  09 Nov 2007; Jakub Moc <jakub@gentoo.org> scratchbox-1.0.7.ebuild:
  enewgroup handles die on its own; fix Manifest

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> Manifest:
  Manifest2 checksums

  04 Feb 2007; Jakub Moc <jakub@gentoo.org> -scratchbox-0.9.8.8.ebuild:
  Drop old.

  03 Feb 2007; Lars Weiler <pylon@gentoo.org> +scratchbox-1.0.7.ebuild:
  Version bump.

  03 Nov 2006; Raul Porcel (armin76) <armin76@gmail.com>
  -scratchbox-0.9.8.7.ebuild:
  drop old

  25 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch>
  +scratchbox-0.9.8.8.ebuild:
  Version bump to v0.9.8.8

  02 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> ChangeLog:
  Added pkg_config() and removed some of the many einfos

  01 Jul 2006; Tiziano Müller <gentoo@dev-zero.ch> ChangeLog:
  New ebuild for bug 94225, thanks to Christian Hartmann for the initial
