@@ -2,5 +2,5 @@ AUX scratchbox.rc 409 RMD160 bbf43d3a75801d02213ca4e28d1d0d7830704b00 SHA1 d91b5
 DIST scratchbox-core-1.0.7-i386.tar.gz 49932823 RMD160 448adff76c3f143355945b8f03f75c38faacdf1f SHA1 818da8d88113b5eaa3fa8a879e6e01e8d599425c SHA256 fd96a22b750b96fa13e51010c7245c27d10e2e43835ae5c9b0f60b6f3e609bf5
 DIST scratchbox-libs-1.0.7-i386.tar.gz 14395788 RMD160 f64d5d2df21d188523f4390ae18be2fbdd78d3d3 SHA1 a61d1adec50211722ce0a0f6c5b1c3e5be715e4f SHA256 4a1e6073ea20b2afe35eba77aa02c270f31713ca9fd77e22ababfe110ed2c4ca
 EBUILD scratchbox-1.0.7.ebuild 2922 RMD160 c57938b791a3fea2eb5113b69c692ce0aeb449c8 SHA1 4748f7f207f1adb363068408990f5d8036dbfed5 SHA256 57c917dd93f44132007a85d1e8e815773774be74cc0061aa0f52c20a471ab7f3
-MISC ChangeLog 1053 RMD160 5501dd1a9a0cfc6940f3db608c0fb13698e43a8d SHA1 ce0675b5a2dc889708986f7c04aa29b5e1c49013 SHA256 1aaa2b842066a9040bb08dcb1618b6a7387212c5dc8e4607a0ef3086768e4ecc
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 1174 RMD160 550d0bb1b8a29fe807e6704c1461ba5da2210747 SHA1 7ea2775662bee5c73b30711f87136cf68cb1eaea SHA256 bb7e52ec229027d2857d812e4ccf9a18c00bbea2405f6edb0316d703fc85c01c
+MISC metadata.xml 330 RMD160 f3288a2055f4170891bd4f79063cfffe616b9314 SHA1 269285fca67e491685b68a81a35110eec5973806 SHA256 28cbcaa7c58fa3e2bc6dd1a859dd2d550eb58b3cda79058fd6dad123ab175160
