@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='arm'> Install the toolchain for the ARM arch 
+			</flag>
+		<flag name='i386'> Install the toolchain for the i386 
+			arch </flag>
+	</use>
 </pkgmetadata>
